<resources>
    <string name="app_name">NotesApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_name">Note name</string>
    <string name="note_date">Note date</string>
    <string name="note_body">Note body</string>
    <string name="background_color">Background color</string>
    <string name="edit_note">Edit Current Note</string>
    <string name="palette">Palette</string>
    <string name="delete_note">Delete current Note</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="search_action">Search</string>
    <string name="cozy_view">Change view</string>
    <string name="save_note">Save</string>
    <string name="unsuccess_save">Save is not success!</string>
    <string name="success_save">Note saved</string>
    <string name="notes_drawer_action">Notes</string>
    <string name="notification_drawer_action">Notification</string>
    <string name="archive_drawer_action">Archive</string>
    <string name="basket_drawer_action">Basket</string>
    <string name="settings_drawer_action">Settings</string>
    <string name="help_feedback">Help/feedback</string>
    <string name="keep">Keep</string>
    <string name="navigation_drawer_one">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toast_notification">Notification should here</string>
    <string name="display_options">Display options</string>
    <string name="add_new_notes_to_end">Add new notes to end</string>
    <string name="move_marked_items_to_the_end">Move marked items to the end</string>
    <string name="add_new_note">Add new note</string>
    <string name="success_add">Note add</string>
    <string name="user_avatar">User Avatar</string>
    <string name="delete_confirmation">Current Note %s deleted!</string>
    <string name="Undo">Undo</string>
    <string name="atention">Attention</string>
    <string name="are_you_sure">Are you really would like delete the Note?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title1">Anemona</string>
    <string name="description1">The genus of anemone has approximately 150 species of herbaceous plants growing in moderate zones of the Northern Hemisphere. Its tuberous and ...</string>
    <string name="title2">Anturium</string>
    <string name="description2">The beautifully flowering evergreen anthurium is more known as “Flamingo Flower” or “Male Happiness”. It belongs to the largest genus of plants from ...</string>
    <string name="title3">Arabis</string>
    <string name="description3">The genus combines more than 100 species growing from the Arctic to the tropical zone of Europe and South America. Perennial or ...</string>
    <string name="title4">Araukaria - coniferous plant ...</string>
    <string name="description4">Araukaria is a tree with unusual leaves. It can be grown in a pot - and this is one of the few coniferous ...</string>
    <string name="title5">Thrift</string>
    <string name="description5">About 50 species are known, wildly growing in Western and Eastern Europe, Siberia, Mongolia and America. Description of Armeria perennial herbaceous ...</string>
    <string name="title6">Astilba</string>
    <string name="description6">The name of Astilba comes from the Greek words a - very, stilbe - shine. It is probably given for brilliant leaves. Description...</string>
    <string name="title7">Astilboides</string>
    <string name="description7">The birthplace of Astilboides is China, where it grows through forest edges, ravines. Astilboides plate - perennial, 30 cm high ...</string>
    <string name="title8">Astra is many years old</string>
    <string name="description8">Description, types and varieties of Astra perennial asters belong to the Astrov family, that is, they are the closest relatives of the famous ...</string>
    <string name="title9">Astra is one -year -old</string>
    <string name="description9">We wrote about the long -term Astra in another article about Astra. Then we will analyze the one -year -old Astra. The genus of one -year -old astra has 1 ...</string>
    <string name="title10">Astra</string>
    <string name="description10">There are 10 types of aperture, in the natural conditions of growing in the Caucasus, in Asia Minor and Southern Europe ...</string>
    <string name="title11">Aukuba</string>
    <string name="description11">Aukuba belongs to the Kizilov family. Her homeland is Japan. Acuba Japanese is common in culture. Aukuba is an eternally green shrub, in ...</string>
    <string name="title12">Acidanter</string>
    <string name="description12">The genus has about 40 species found in the tropics of Africa. Acidanter is a cormation of a perennial plant resembling gladioli. Stems ...</string>
    <string name="title13">Badan</string>
    <string name="description13">Badan is a popular perennial plant, in one place it grows without a transplant for more than 10 years. Badan has a fat ...</string>
    <string name="title14">BAKOP</string>
    <string name="description14">A plant from the noricovik family. Originally from South Africa. In the culture of Bakop, she appeared since 1993. She was called ...</string>
    <string name="title15">Balsam</string>
    <string name="description15">Balzamine is a herbaceous plant of the Balsamin family. The Latin name Impatiens is not withstanding pressure. It reflects the property ...</string>
    <string name="title16">Barvinok</string>
    <string name="description16">Barvinok, or its other name of Winka (Vinca) is a well -eating or steady ground cover, kuts family. Barvinok grows very quickly ...</string>
    <string name="title17">Marigold</string>
    <string name="description17">The genus comes from America, where in the wild they grow from New Mexico to Argentina. More than 30 ...</string>
    <string name="title18">Begonia</string>
    <string name="description18">Begonia is from the tropics. Representatives of the Begonia family surprise us with their diversity of sizes, colors and shapes. Adult flowers ...</string>
    <string name="title19">Clulture begonia</string>
    <string name="description19">Recently, tuber begonia is common in gardening and landscaping. The reason for popularity was the successful work of breeders from different countries: ...</string>
    <string name="title20">Emergency</string>
    <string name="description20">Unreleal or its other name Colchikum - from the family of monodol plants, bended. Also known under the popular name ...</string>
    <string name="title21">Butterbur</string>
    <string name="description21">In the spring, along the edges of the edges or on the sidelines of arable land, it can be lucky enough to see wonderful dense white or pink spherical ...</string>
    <string name="title22">Beloperone - growing in ...</string>
    <string name="description22">Beloperone is one of the most decorative indoor plants that can be grown both indoors and on ...</string>
    <string name="title23">White flower</string>
    <string name="description23">The homeland is the Mediterranean, Central Turkey, Europe, Iran. The genus has approximately 10 species of bulbous plants, blooming early ...</string>
    <string name="title24">Bocarnea</string>
    <string name="description24">BEAUCARNEA is a perennial and evergreen plant, which belongs to the Nolinov family. It is divided into several types, each of ...</string>
    <string name="title25">Boltony</string>
    <string name="description25">In natural conditions, the genus has about 9 different species common in East Asia and North America. This...</string>
    <string name="title26">Brahcoma</string>
    <string name="description26">Brahcoma is an elegant annual (sometimes perennial), a strongly branched plant. The foliage of brachikoma is openwork, small, narrow, linear, green. On the bush ...</string>
    <string name="title27">Bravlia: landing and care ...</string>
    <string name="description27">Description of the plant Family: Annial - Solanaceae. Rod: Burtia - Browallia. Type: Brailia is beautiful (or magnificent) - Browallia Specios Hook. Broilia —...</string>
    <string name="title28">Brunner</string>
    <string name="description28">Brunner is a wonderful perennial. Beautiful Brunners of frosty-silver coloring will be the decoration of your flower garden. Brunner flowers of course, Brunner blooms (flowers ...</string>
    <string name="title29">Bugenville</string>
    <string name="description29">Bugenville - a flower is very unusual, starting from the name and ending with the appearance, in Germany many even call it ...</string>
    <string name="title30">Buznik</string>
    <string name="description30">Recently, Russian amateur gardeners began to show great interest in herbaceous decorative plants, which are distinguished by impressive dimensions. Among...</string>
    <string name="title31">Bouquet of roses - flower ...</string>
    <string name="description31">It always gives me pleasure to come on a date to a charming luxurious girl with a beautiful bouquet of wonderful flowers, fragrant ...</string>
    <string name="title32">Bouquet of flowers</string>
    <string name="description32">Every year, at the same time, in early spring, many men just take flower shops in ...</string>
    <string name="title33">Wallota</string>
    <string name="description33">Wallota is such a flower that it is very similar to the brothers from her family. You can distinguish it, for example, by characteristic ...</string>
    <string name="title34">Wanda</string>
    <string name="description34">Wanda orchids (lat. Vanda) - perhaps the most beautiful flowers from the orchid family. With good care, these elegant flowers can ...</string>
    <string name="title35">cornflower</string>
    <string name="description35">A cornflower flower is a plant for summer flower beds. Cold -resistant annual. Color - white, yellow, pink, red, blue, blue, purple. Flowering time ...</string>
    <string name="title36">Vasiliznik</string>
    <string name="description36">Vasiliznik (Talktrum) Description of the Vasilitnik Latin name: Thalictrum. Type: perennial. Height: 150-200 cm. Place: Shadow and partial shade. Soil: fertile, neutral, rich in humus. Propagation: Light. Care: Light. Basic...</string>
    <string name="title37">Cotton wool</string>
    <string name="description37">About 80 species of a cotton wool, which is common in South and North America. Grassy plants with horizontal, exit far ...</string>
    <string name="title38">Three -leaf shift - landing ...</string>
    <string name="description38">Watch, or rather, a three -leaf, very decorative swamp plant. It can successfully decorate ponds and ponds. In our...</string>
    <string name="title39">Loosestrife</string>
    <string name="description39">The verbaner belongs to the primary family. History of the name of the Verbeinik: It is believed that one of the types of verbanics described dioscoride and named ...</string>
    <string name="title40">Verbena</string>
    <string name="description40">The description of Verbena is as many among flowers such that they give us beauty, remaining little -known. Such is Verben. She was known again ...</string>
    <string name="title41">Verbena ampel</string>
    <string name="description41">Ampel is grown as an annual plant. A grassy flower is most often planted in suspended baskets, because the stems of verbena ...</string>
    <string name="title42">Veronica</string>
    <string name="description42">The genus includes 300 types of Veronica, common throughout the world, very widely in Europe. In Russia, 150 species, large ...</string>
    <string name="title43">Vertical gardening</string>
    <string name="restore_note">Restore</string>
    <string name="archive_note">Archive note</string>
</resources>