<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_action"
        android:title="@string/add_new_note"
        android:icon="@drawable/ic_baseline_add_circle_outline_24" />

    <item
        android:id="@+id/edit_action"
        android:title="@string/edit_note"
        android:icon="@drawable/ic_baseline_edit_24" />

    <item
        android:id="@+id/restore_action"
        android:title="@string/restore_note"
        android:icon="@drawable/ic_baseline_restore_page_24" />

    <item
        android:id="@+id/archive_action"
        android:title="@string/archive_note"
        android:icon="@drawable/ic_baseline_archive_24" />

    <item
        android:id="@+id/delete_action"
        android:title="@string/delete_note"
        android:icon="@drawable/ic_baseline_delete_24" />

    <item
        android:id="@+id/back_action"
        android:title="@string/back"
        android:icon="@drawable/ic_baseline_arrow_back_24" />

</menu>