<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="?colorOnPrimary"
    android:layout_margin="@dimen/minimum_margin_for_frame"
    tools:context=".SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageButton
        android:id="@+id/back_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_48"/>

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_drawer_action"
        android:textAlignment="viewStart"
        android:textSize="@dimen/big_text"
        app:layout_constraintStart_toEndOf="@id/back_action"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_options"
        android:textSize="@dimen/note_body_text_size"
        android:textColor="?android:statusBarColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_action"/>

    <TextView
        android:id="@+id/add_notes_to_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_notes_to_end"
        android:textSize="@dimen/note_body_text_size"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/add_note_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/move_marked_notes_to_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_marked_items_to_the_end"
        android:textSize="@dimen/note_body_text_size"
        app:layout_constraintTop_toBottomOf="@id/add_note_switch"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/move_marked_note_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_note_switch"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>