<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true">


    <TextView
        android:id="@+id/note_name"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:text="@string/note_name"
        android:textSize="@dimen/note_name_text_size"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/note_date"/>

    <TextView
        android:id="@+id/note_date"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/note_date"
        app:layout_constraintBottom_toTopOf="@+id/note_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/note_name" />

    <TextView
        android:id="@+id/note_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/note_body"
        android:textSize="@dimen/note_body_text_size"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/note_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/palette_container"
        android:background="@drawable/frame_border" />

    <FrameLayout
        android:id="@+id/palette_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/palette_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/baseline_palette_24" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_edit_24" />


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>