<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/note_body_edit_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true">


    <EditText
        android:id="@+id/edit_note_name"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:text="@string/note_name"
        android:padding="@dimen/name_padding"
        android:textSize="@dimen/note_name_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/edit_note_date"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:text="@string/note_date"
        android:padding="@dimen/body_padding"
        android:textSize="@dimen/note_body_text_size"
        app:layout_constraintStart_toEndOf="@id/edit_note_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_note_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="@dimen/body_padding"
        android:text="@string/note_body"
        android:textSize="@dimen/note_body_text_size"
        app:layout_constraintBottom_toTopOf="@id/palette_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_note_name" />

    <LinearLayout
        android:id="@+id/palette_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_note_body"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <ImageButton
            android:id="@+id/button_palette_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_purple_custom"
/>

        <ImageButton
            android:id="@+id/button_palette_teal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_teal_custom" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <!--        app:menu="@menu/bottom_navigation_menu"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>